<?xml version="1.0"?>
<package>
  <name>vision_example</name>
  <version>0.0.0</version>
  <description>The vision_example package</description>

  <maintainer email="zihan.chen@jhu.edu">zihan</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>image_proc</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>camera_calibration_parsers</build_depend>
  <build_depend>image_geometry</build_depend>


  <run_depend>image_proc</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>camera_calibration_parsers</run_depend>
  <run_depend>image_geometry</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
